# CollisionDetection

./: .gitignore  CMakeLists.txt  Collision Detection.sln  README.rdoc  gtest.makefile  nearest_points.wxm
Collisions/: CMakeLists.txt  Collisions.vcproj  collision.cpp  collisions.h  errors.h  floating_point.h  point.h  vector.h
GoogleTestFramework/msvc/: gtest.vcproj
Tester/: CMakeLists.txt  Tester.vcproj  collisions_unittest.cpp  float_unittest.cpp  helpers_unittest.cpp  main.cpp  main.h  point_unittest.cpp  vector_unittest.cpp
